Add initial version of links

--- a/index.html
+++ b/index.html
@@ -5,8 +5,30 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>daniil.ca</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;500&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
-  
+  <main>
+    <section>
+      <h1>Daniil Molodkov</h1>
+      <ul>
+        <li>
+          <a href="https://www.linkedin.com/in/daniilmolodkov/" target="_blank" rel="noreferrer">LinkedIn</a>
+        </li>
+        <li>
+          <a href="https://github.com/daniil" target="_blank" rel="noreferrer">GitHub</a>
+        </li>
+        <li>
+          <a href="https://open.spotify.com/artist/0njszUF4sEjhz5faWDYtv5" target="_blank" rel="noreferrer">Spotify</a>
+        </li>
+        <li>
+          <a href="https://mixcloud.com/monogammee" target="_blank" rel="noreferrer">Mixcloud</a>
+        </li>
+      </ul>
+    </section>
+  </main>
 </body>
 </html>
